# path-tree

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  README.md  VIDEO_SCRIPT.md  diagrams.md  docker-compose.yml  mypy.ini  openapi.yaml  pyproject.toml  render.yaml  requirements.txt
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: health.py  programs.py  status.py
app/core/: database.py  security.py  settings.py
app/models/: plan.py  program.py
app/schemas/: common.py
backend/: .env  Dockerfile  add_compe_courses.py  check_db.py  requirements.txt  setup_db.ps1  start-backend.ps1
backend/src/app/: main.py  seed.py
backend/src/app/core/: auth.py  dependencies.py  settings.py
backend/src/app/models/: account.py  completion.py  course.py  plan.py  program.py  term.py
backend/src/app/repository/: account.py  completion.py  course.py  plan.py  program.py
backend/src/app/routes/: auth.py  courses.py  plans.py  programs.py  status.py  term.py
backend/src/app/schemas/: account.py  course.py  plan.py  program.py  token.py
backend/src/app/services/: account.py  plan.py  program.py
docs/: openapi.yaml
frontend/: Dockerfile  package-lock.json  package.json
frontend/.next/dev/: prerender-manifest.json  trace
frontend/.next/dev/cache/: .rscinfo
frontend/.next/dev/types/: routes.d.ts  (+1 more)
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Logo.tsx  Navbar.tsx  SurpriseOverlay.tsx  SurpriseOverlayDark.tsx  ThemeSwitcherButton.tsx  UserButton.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts  auth.ts
frontend/src/types/: account.ts
frontend/types/: validator.ts
tests/: test_health.py
(+149 files in other folders)
