[project]
name = "student-planner"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic-settings>=2.4",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.7",
  "ruff>=0.5",
  "black>=24.4",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "python-dotenv>=1.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP", "B"]   # pyflakes/pycodestyle/imports/pyupgrade/bugbear
ignore = ["E501"]                      # let Black handle line length

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
